Fix SSL and Mobile Layout

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,15 @@
-flask
-langchain
-langchain-groq
-langchain-community
-langchain-huggingface
+beautifulsoup4
+dnspython
 faiss-cpu
-sentence-transformers
 flask
+gunicorn
 langchain
-langchain-groq
 langchain-community
+langchain-groq
 langchain-huggingface
-faiss-cpu
-sentence-transformers
+pymongo
 pymupdf4llm
 python-dotenv
-beautifulsoup4
 requests
-pymongo
-dnspython
-gunicorn
+sentence-transformers
+certifi
